[gd_scene load_steps=11 format=2]

[ext_resource path="res://Root.gd" type="Script" id=1]
[ext_resource path="res://ArtAssets/Title Screen Without Buttons.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Start.gd" type="Script" id=3]
[ext_resource path="res://ArtAssets/Button_Start_P.png" type="Texture" id=4]
[ext_resource path="res://ArtAssets/Button_Story_A.png" type="Texture" id=5]
[ext_resource path="res://ArtAssets/Button_Story_P.png" type="Texture" id=6]
[ext_resource path="res://ArtAssets/Button_Controls_P.png" type="Texture" id=7]
[ext_resource path="res://ArtAssets/Button_Controls_A.png" type="Texture" id=8]
[ext_resource path="res://ArtAssets/Button_Quit_P.png" type="Texture" id=9]
[ext_resource path="res://ArtAssets/Button_Quit_A.png" type="Texture" id=10]

[node name="Root" type="Node" index="0"]

script = ExtResource( 1 )

[node name="AcceptDialog" type="AcceptDialog" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 83.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Warning!"
resizable = false
dialog_text = "This game requires the use of two (2) controllers. Make sure they are both plugged in before playing."
dialog_hide_on_ok = true

[node name="TextureRect" type="TextureRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0
script = ExtResource( 3 )
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="StartButton" type="TextureButton" parent="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 462.0
margin_top = 226.0
margin_right = 708.0
margin_bottom = 320.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="StoryButton" type="TextureButton" parent="TextureRect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 930.0
margin_top = 228.0
margin_right = 1180.0
margin_bottom = 322.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 5 )
_sections_unfolded = [ "Textures" ]

[node name="ControlsButton" type="TextureButton" parent="TextureRect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 462.0
margin_top = 332.0
margin_right = 713.0
margin_bottom = 426.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[node name="QuitButton" type="TextureButton" parent="TextureRect" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 930.0
margin_top = 332.0
margin_right = 1179.0
margin_bottom = 422.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )

[connection signal="pressed" from="TextureRect/StartButton" to="TextureRect" method="_on_Start_button_up"]

[connection signal="pressed" from="TextureRect/ControlsButton" to="TextureRect" method="_on_Tutorial_button_up"]

[connection signal="pressed" from="TextureRect/QuitButton" to="TextureRect" method="_on_Quit_button_up"]


