[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Start.gd" type="Script" id=1]

[node name="MarginContainer" type="TextureRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 120.0
margin_right = -120.0
margin_bottom = -120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Button" type="Button" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1364.0
margin_top = 768.0
margin_right = 1427.0
margin_bottom = 788.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Anchor", "Margin" ]

[connection signal="button_up" from="Button" to="Button" method="_on_MainMenu_button_up"]


